Import Web Studio design with all sections and features

--- a/index.html
+++ b/index.html
@@ -3,18 +3,18 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Web Studio - Build Digital Experiences</title>
-    <meta name="description" content="We craft beautiful, functional websites and applications that bring your vision to life. Expert web development, UI/UX design, and performance optimization." />
-    <meta name="author" content="Web Studio" />
+    <title>Web Studio | Digital Web Agency - Custom Websites & Web Applications</title>
+    <meta name="description" content="Web Studio is a modern digital web agency specializing in custom website design, web development, and web applications for small to mid-sized businesses." />
+    <meta name="author" content="Web Studio Digital Agency" />
 
-    <meta property="og:title" content="Web Studio - Build Digital Experiences" />
-    <meta property="og:description" content="We craft beautiful, functional websites and applications that bring your vision to life." />
+    <meta property="og:title" content="Web Studio | Digital Web Agency - Custom Websites & Web Applications" />
+    <meta property="og:description" content="We build digital experiences that drive results. Custom websites, web applications, and e-commerce solutions for forward-thinking businesses." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="/placeholder.svg" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@Lovable" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:site" content="@webstudio" />
+    <meta name="twitter:image" content="/placeholder.svg" />
   </head>
 
   <body>
