Improve mobile/desktop UX: center content, add gradient banners to process cards, compact spacing, custom favicon
- Center service titles and content on all devices
- Add unique gradient banners to process section cards (Discovery, Design, etc.)
- Reduce hero title-to-description gap by 75% for tighter layout
- Compact hero section sizing (smaller fonts, reduced padding)
- Fix contact section alignment with items-start
- Remove invisible 'Get In Touch' gradient block
- Reduce spacing between contact info cards by 30%
- Update footer social links to TikTok and Instagram only
- Replace generic favicon with custom Web Studio 'W' logo SVG
- Improve mobile vertical spacing throughout sections

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Web Studio | Digital Web Agency - Custom Websites & Web Applications</title>
     <meta name="description" content="Web Studio is a modern digital web agency specializing in custom website design, web development, and web applications for small to mid-sized businesses." />
